# clawlet

./: .gitignore  .rustc_info.json  CHANGELOG.md  CODE_REVIEW.md  Cargo.toml  Dockerfile.e2e  README.md  clawlet  design.md
.github/workflows/: ci.yml  release.yml
config/: policy.example.yaml
crates/clawlet-cli/: Cargo.toml
crates/clawlet-cli/src/: main.rs  tui.rs
crates/clawlet-cli/src/commands/: auth.rs  connect.rs  daemon.rs  export_mnemonic.rs  init.rs  mod.rs  send.rs  send_tx.rs  serve.rs  sign_message.rs  start.rs  status.rs  stop.rs  transfer.rs  util.rs
crates/clawlet-core/: Cargo.toml
crates/clawlet-core/src/: ais.rs  audit.rs  auth.rs  chain.rs  config.rs  fs.rs  lib.rs  policy.rs  types.rs
crates/clawlet-core/tests/: policy_integration_tests.rs
crates/clawlet-evm/: Cargo.toml
crates/clawlet-evm/abi/: IAavePool.json  IERC20.json  INonfungiblePositionManager.json  ISwapRouter.json  IUniswapV2Router.json
crates/clawlet-evm/src/: abi.rs  adapter.rs  executor.rs  lib.rs  okx.rs  send_raw_validation.rs  swap_validation.rs  token.rs  tx.rs
crates/clawlet-ipc/: Cargo.toml
crates/clawlet-ipc/src/: client.rs  dispatch.rs  handlers.rs  lib.rs  server.rs  socket.rs  types.rs
crates/clawlet-ipc/tests/: client_server_test.rs  dispatch_test.rs  json_rpc_test.rs  socket_test.rs  types_test.rs
crates/clawlet-rpc/: Cargo.toml
crates/clawlet-rpc/src/: auth.rs  client.rs  dispatch.rs  handlers.rs  lib.rs  routes.rs  server.rs  types.rs
crates/clawlet-rpc/tests/: client_server_test.rs  dispatch_test.rs  integration_tests.rs  json_rpc_test.rs  types_test.rs
crates/clawlet-signer/: Cargo.toml
crates/clawlet-signer/src/: hd.rs  keychain.rs  keystore.rs  lib.rs  signer.rs
crates/clawlet-solana/: Cargo.toml
crates/clawlet-solana/src/: adapter.rs  lib.rs  signer.rs  tx.rs
docs/: SECURITY_AUDIT_SUBAGENT.md  deployment.md  linux-deployment-discuss.md  macos-deployment-discuss.md  security-boundary-analysis.md  usage.md
scripts/: install.ps1  install.sh  release.sh  uninstall.sh
skills/: aave_v3_supply.yaml  aave_v3_withdraw.yaml  uniswap_v3_swap.yaml
src/: lib.rs  main.rs
tests/: README.md
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs
