[workspace]
members = [
    "crates/clawlet-core",
    "crates/clawlet-signer",
    "crates/clawlet-evm",
    "crates/clawlet-rpc",
    "crates/clawlet-cli",
    "tests/integration",
]
resolver = "2"

[workspace.dependencies]
alloy = { version = "1" }

[workspace.package]
version = "0.1.17"
edition = "2021"
license = "MIT"
