[package]
name = "clawlet-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI entry point for Clawlet"

[[bin]]
name = "clawlet"
path = "src/main.rs"

[dependencies]
clawlet-core = { path = "../clawlet-core" }
clawlet-signer = { path = "../clawlet-signer" }
clawlet-rpc = { path = "../clawlet-rpc" }
clawlet-evm = { path = "../clawlet-evm" }
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
hex = "0.4"
alloy = { workspace = true }
rust_decimal = "1"
chrono = { version = "0.4", features = ["serde"] }
jsonrpsee = { version = "0.24", features = ["server"] }
libc = "0.2"
rpassword = "5"
which = "8"
