[package]
name = "clawlet-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types, policy engine, and audit logging for Clawlet"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
