[package]
name = "clawlet-evm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "EVM chain adapter for Clawlet"

[dependencies]
clawlet-core = { path = "../clawlet-core" }
clawlet-signer = { path = "../clawlet-signer" }
alloy = { version = "1", features = [
    "sol-types",
    "dyn-abi",
    "json-abi",
    "providers",
    "provider-http",
    "rpc-types",
    "consensus",
    "network",
    "signers",
    "signer-local",
    "k256",
    "contract",
] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
hex = "0.4"
sha3 = "0.10"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
