[package]
name = "clawlet-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RPC API server for Clawlet (Unix domain socket IPC)"

[dependencies]
clawlet-core = { path = "../clawlet-core" }
clawlet-evm = { path = "../clawlet-evm" }
clawlet-signer = { path = "../clawlet-signer" }
interprocess = { version = "2", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
thiserror = "2"
tracing = "0.1"
dirs = "5"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
serde_json = "1"
tokio = { version = "1", features = ["full", "test-util"] }
