[package]
name = "clawlet-rpc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP JSON-RPC server for Clawlet"

[dependencies]
clawlet-core = { path = "../clawlet-core" }
clawlet-evm = { path = "../clawlet-evm" }
clawlet-signer = { path = "../clawlet-signer" }
jsonrpsee = { version = "0.24", features = ["server", "client", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
thiserror = "2"
tracing = "0.1"
tower = "0.4"
tower-http = { version = "0.5", features = ["set-header"] }
http = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
serde_json = "1"
tokio = { version = "1", features = ["full", "test-util"] }
