[package]
name = "clawlet-signer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Key management and signing for Clawlet"

[dependencies]
clawlet-core = { path = "../clawlet-core" }
alloy = { workspace = true }
k256 = { version = "0.13", features = ["ecdsa"] }
eth-keystore = { version = "0.5", features = ["geth-compat"] }
bip32 = "0.5"
bip39 = "2"
sha3 = "0.10"
rand = "0.8"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
