[package]
name = "clawlet-signer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Key management and signing for Clawlet"

[dependencies]
clawlet-core = { path = "../clawlet-core" }
alloy = { workspace = true }
k256 = { version = "0.13", features = ["ecdsa"] }
bip32 = "0.5"
bip39 = "2"
sha3 = "0.10"
rand = "0.8"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
scrypt = "0.11"
aes-gcm = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
