[package]
name = "clawlet-solana"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Solana chain adapter for Clawlet"

[dependencies]
clawlet-core = { path = "../clawlet-core" }
clawlet-signer = { path = "../clawlet-signer" }
solana-sdk = "2"
solana-client = "2"
spl-token = "6"
spl-associated-token-account = "4"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bs58 = "0.5"
openssl = { version = "0.10", features = ["vendored"] }
ed25519-dalek = "2"
bip39 = "2"
hmac = "0.12"
sha2 = "0.10"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
