[package]
name = "clawlet-integration-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Integration tests for Clawlet"
publish = false

# This crate exists solely for integration tests.
# It has no library code.
[lib]
name = "clawlet_integration_tests"
path = "src/lib.rs"

[dependencies]
clawlet-core = { path = "../../crates/clawlet-core" }
clawlet-signer = { path = "../../crates/clawlet-signer" }
clawlet-evm = { path = "../../crates/clawlet-evm" }
clawlet-rpc = { path = "../../crates/clawlet-rpc" }
tokio = { version = "1", features = ["full"] }
tempfile = "3"
serde_json = "1"
hex = "0.4"
alloy = { version = "1", features = ["providers", "json-abi", "dyn-abi", "rpc-types"] }
testcontainers = { version = "0.24", features = ["blocking"] }
